welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: not found: value SiestFaceMur
	recule(SiestFaceMur);
               ^Program:3: error: not found: value SiestFaceMur
}else{avance(SiestFaceMur);
             ^