welcome.lessons.welcome.conditions.Conditions.scala.code
if(estFaceMur){
	recule(SiestFaceMur);
}else{avance(SiestFaceMur);
}